--- a/about.html
+++ b/about.html
@@ -16,27 +16,27 @@
     
 </head>
 <body>
-    <div class="header">
-      <div class="left-box">
+  <div class="header">
+    <div class="left-box">
         <img src="CA_logo_2.png" alt="Company Logo">
-      </div>
-      <div class="section yellow">
-        <p>Mohit Kedia & Associates</p>
-      </div>
-      <div class="section orange">
+    </div>
+    <div class="section yellow">
+        <a href="index.html">Mohit Kedia & Associates</a>
+    </div>
+    <div class="section orange">
         <div class="hamburger-menu" onclick="toggleMenu()">
-          &#9776;
+            &#9776;
         </div>
         <div class="sub-sections">
-          <div class="sub-section home"><a href="index.html">Home</a></div>
-          <div class="sub-section About"><a href="about.html">About us</a></div>
-          <div class="sub-section Services"><a href="services.html">Services</a></div>
-          <div class="sub-section Blog"><a href="https://medium.com/"  target="_blank">Blog</a></div>
-          <div class="sub-section Laws & Rules"><a href="laws.html">Legal</a></div>
-          <div class="sub-section Contact"><a href="#footer">Contact us</a></div>
+            <a class="sub-section home" href="index.html">Home</a>
+            <a class="sub-section About" href="about.html">About us</a>
+            <a class="sub-section Services" href="services.html">Services</a>
+            <a class="sub-section Blog" href="https://medium.com/" target="_blank">Blog</a>
+            <a class="sub-section Laws" href="laws.html">Legal</a>
+            <a class="sub-section Contact" href="#footer">Contact us</a>
         </div>
-      </div>
     </div>
+</div>
 
     <div class="about-us-title">
         <p>About us</p>
