--- a/index.html
+++ b/index.html
@@ -184,15 +184,10 @@
       <a href="https://medium.com/" target="_blank" class="home-blog-btn">View all</a>
     </div>
 
-    <div class="comment-title">
-      <p>Our Strength, Our Clients</p>
-    </div>
-  
-  
   
     <div id="comment-section" class="comment-section">
       <div class="container">
-        <div class="head"><h1>Post a Comment</h1></div>
+        <div class="head"><h2>Our Strength, Our Clients</h2></div>
         <div><span id="comment-count">0</span> Comments</div>
         <div class="text"><p>We are happy to hear from you</p></div>
         <div class="comments"></div>
@@ -200,9 +195,9 @@
             <img src="public/images/anonymous.png" alt="pic">
             <div class="content">
                 <h2>Comment as: </h2>
-                <input type="text" value="Anonymous" class="user">
+                <input type="text" value="Name" class="user">
                 <div class="commentinput">
-                    <input type="text" placeholder="Enter comment" class="usercomment">
+                    <textarea placeholder="Enter comment" class="usercomment"></textarea>
                     <div class="buttons">
                         <button type="submit" disabled id="publish">Publish</button>
                         
