removed the blog preview for now

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       <p>Blog</p>
     </div>
     
-    
+    <!--
     <div class="blog-preview">
       <div class="blog-item blue-bg">
           <a href="https://medium.com/illumination/personal-finance-what-it-is-and-why-it-matters-f7988137622b" target="_blank">
@@ -180,8 +180,10 @@
       </div>
     </div>
 
+    -->
+
     <div class="button-container">
-      <a href="https://medium.com/" target="_blank" class="home-blog-btn">View all</a>
+      <a href="https://medium.com/" target="_blank" class="home-blog-btn">View</a>
     </div>
 
   
