--- a/disclaimer.html
+++ b/disclaimer.html
@@ -33,7 +33,7 @@
             <a class="sub-section home" href="index.html">Home</a>
             <a class="sub-section About" href="about.html">About us</a>
             <a class="sub-section Services" href="services.html">Services</a>
-            <a class="sub-section Blog" href="https://medium.com/" target="_blank">Blog</a>
+            <a class="sub-section Blog" href="https://medium.com/@camohitkedia" target="_blank">Blog</a>
             <a class="sub-section Laws" href="laws.html">Legal</a>
             <a class="sub-section Contact" href="#footer">Contact us</a>
         </div>
