contact page update

--- a/disclaimer.html
+++ b/disclaimer.html
@@ -16,6 +16,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+  <meta name="description" content="Looking for a trusted Chartered Accountant near you in Whitefield, Bangalore? Mohit Kedia & Associates offers expert CA services for businesses and individuals.">
+
+
+
+
 </head>
 <body>
   <div class="header">
@@ -35,7 +40,7 @@
             <a class="sub-section Services" href="services.html">Services</a>
             <a class="sub-section Blog" href="https://medium.com/@camohitkedia" target="_blank">Blog</a>
             <a class="sub-section Laws" href="laws.html">Legal</a>
-            <a class="sub-section Contact" href="#footer">Contact us</a>
+            <a class="sub-section Contact" href="contact.html">Contact us</a>
         </div>
     </div>
 </div>
