--- a/about.html
+++ b/about.html
@@ -13,6 +13,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+
+    <meta name="description" content="Looking for a trusted Chartered Accountant near you in Whitefield, Bangalore? Mohit Kedia & Associates offers expert CA services for businesses and individuals.">
+
     
 </head>
 <body>
@@ -33,7 +36,7 @@
             <a class="sub-section Services" href="services.html">Services</a>
             <a class="sub-section Blog" href="https://medium.com/@camohitkedia" target="_blank">Blog</a>
             <a class="sub-section Laws" href="laws.html">Legal</a>
-            <a class="sub-section Contact" href="#footer">Contact us</a>
+            <a class="sub-section Contact" href="contact.html">Contact us</a>
         </div>
     </div>
 </div>
@@ -57,13 +60,15 @@
         CA Mohit Kumar Kedia is a member of the Institute of Chartered Accountants of India (ICAI) since 2013 having more than 12 years of experience in the field of Accounting, Auditing, Taxation, Corporate Laws and Project Financing. He is advisor to various Corporates and Other Organizations and HNIs on Financial Planning, Management Consultancy and Tax planning aspects etc. He worked with various MNC's and top consultancy firm prior to enhance his expertise as praticing Chartered Accountant.
       </p>
     </div>
-
+<!--
     <div class="about-us-history">
         <h2>Our History</h2>
         <p>
             Formed on June 1992, S K Patodia & Associates LLP was the result of a dynamic and innovative CA expert. It was established with a vision to shape new standards in deliverance of services. Since then it has been synergic and as a consequence of Herculean endeavours, our firm has nineteen partners as of today.
         </p>
     </div>
+
+  -->
 
     <div class="about-mission">
       <h2>Our Mission</h2>
