--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Mohit Kedia and Associates</title>
     <link rel="stylesheet" href="public/styles.css">
     <link rel="stylesheet" href="public/header.css">
     <link rel="stylesheet" href="public/about-us.css">
@@ -15,6 +15,38 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+
+
+    <meta name="description" content="Looking for a trusted Chartered Accountant near you in Whitefield, Bangalore? Mohit Kedia & Associates offers expert CA services for businesses and individuals.">
+
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "AccountingService",
+          "name": "Mohit Kedia & Associates",
+          "image": "https://yourwebsite.com/logo.png",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Shilpitha Sunflower Apartment, Borewell Road",
+            "addressLocality": "Whitefield",
+            "addressRegion": "Bangalore",
+            "postalCode": "560066",
+            "addressCountry": "IN"
+          },
+          "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": 12.9350,
+            "longitude": 77.6100
+          },
+          "url": "https://mohitkediaassociates.com",
+          "telephone": "+919874820170",
+          "openingHours": "Mo-Sa 09:00-18:00",
+          "sameAs": [
+            "https://www.facebook.com/yourpage",
+            "https://www.linkedin.com/yourpage"
+          ]
+        }
+    </script>
     
 </head>
 <body>
@@ -35,7 +67,7 @@
                 <a class="sub-section Services" href="services.html">Services</a>
                 <a class="sub-section Blog" href="https://medium.com/@camohitkedia" target="_blank">Blog</a>
                 <a class="sub-section Laws" href="laws.html">Legal</a>
-                <a class="sub-section Contact" href="#footer">Contact us</a>
+                <a class="sub-section Contact" href="contact.html">Contact us</a>
             </div>
         </div>
     </div>
