--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 
 
-    <meta name="description" content="Looking for a trusted Chartered Accountant near you in Whitefield, Bangalore? Mohit Kedia & Associates offers expert CA services for businesses and individuals.">
+    <meta name="description" content="Looking for a trusted Chartered Accountant near you in Whitefield, Bangalore? Mohit Kedia & Associates offers expert CA services like Income Tax Matters, Audits and Financial Analysis for businesses and individuals.">
+    <meta name="description" content="Mohit Kedia & Associates is a premier Chartered Accountancy Firm, focused on rendering services and adding value to its clients across the globe by providing highly efficient, technical and professional services.">
+
+
 
     <script type="application/ld+json">
         {
@@ -40,11 +43,7 @@
           },
           "url": "https://mohitkediaassociates.com",
           "telephone": "+919874820170",
-          "openingHours": "Mo-Sa 09:00-18:00",
-          "sameAs": [
-            "https://www.facebook.com/yourpage",
-            "https://www.linkedin.com/yourpage"
-          ]
+          "openingHours": "Mo-Fri 09:00-18:00",
         }
     </script>
     
