--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>Mohit Kedia and Associates | About Us</title>
     <link rel="stylesheet" href="public/styles.css">
     <link rel="stylesheet" href="public/header.css">
     <link rel="stylesheet" href="public/about-us.css">
@@ -15,7 +15,33 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 
     <meta name="description" content="Looking for a trusted Chartered Accountant near you in Whitefield, Bangalore? Mohit Kedia & Associates offers expert CA services for businesses and individuals.">
+    <meta name="description" content="Mohit Kedia & Associates is a premier Chartered Accountancy Firm, focused on rendering services and adding value to its clients across the globe by providing highly efficient, technical and professional services.">
 
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "AccountingService",
+        "name": "Mohit Kedia & Associates",
+        "image": "https://yourwebsite.com/logo.png",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Shilpitha Sunflower Apartment, Borewell Road",
+          "addressLocality": "Whitefield",
+          "addressRegion": "Bangalore",
+          "postalCode": "560066",
+          "addressCountry": "IN"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 12.9350,
+          "longitude": 77.6100
+        },
+        "url": "https://mohitkediaassociates.com",
+        "telephone": "+919874820170",
+        "openingHours": "Mo-Fri 09:00-18:00",
+      }
+  </script>
+  
     
 </head>
 <body>
