--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Services</title>
+  <title>Mohit Kedia and Associates | Our Services</title>
   <link rel="stylesheet" href="public/styles.css">
     <link rel="stylesheet" href="public/header.css">
     <link rel="stylesheet" href="public/about-us.css">
@@ -16,6 +16,31 @@
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 
   <meta name="description" content="Looking for a trusted Chartered Accountant near you in Whitefield, Bangalore? Mohit Kedia & Associates offers expert CA services like Income Tax Matters, Audits and Financial Analysis for businesses and individuals.">
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "AccountingService",
+      "name": "Mohit Kedia & Associates",
+      "image": "https://yourwebsite.com/logo.png",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Shilpitha Sunflower Apartment, Borewell Road",
+        "addressLocality": "Whitefield",
+        "addressRegion": "Bangalore",
+        "postalCode": "560066",
+        "addressCountry": "IN"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 12.9350,
+        "longitude": 77.6100
+      },
+      "url": "https://mohitkediaassociates.com",
+      "telephone": "+919874820170",
+      "openingHours": "Mo-Fri 09:00-18:00",
+    }
+  </script>
 
 </head>
 <body>
