improving responsiveness of footer and comment section

--- a/disclaimer.html
+++ b/disclaimer.html
@@ -16,32 +16,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
-  <meta name="description" content="Looking for a trusted Chartered Accountant near you in Whitefield, Bangalore? Mohit Kedia & Associates offers expert CA services for businesses and individuals.">
+  
+  
+  <meta name="description" content="Mohit Kedia & Associates's website has been formed strictly by the guidelines of the Institute of CAs in India. As per the rules, CAs cannot advertise themselves">
 
-  <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "AccountingService",
-      "name": "Mohit Kedia & Associates",
-      "image": "https://yourwebsite.com/logo.png",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Shilpitha Sunflower Apartment, Borewell Road",
-        "addressLocality": "Whitefield",
-        "addressRegion": "Bangalore",
-        "postalCode": "560066",
-        "addressCountry": "IN"
-      },
-      "geo": {
-        "@type": "GeoCoordinates",
-        "latitude": 12.9350,
-        "longitude": 77.6100
-      },
-      "url": "https://mohitkediaassociates.com",
-      "telephone": "+919874820170",
-      "openingHours": "Mo-Fri 09:00-18:00",
-    }
-  </script>
+
 
 
 
