--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mohit Kedia and Associates</title>
+    <title>Mohit Kedia and Associates CA Services</title>
     <link rel="stylesheet" href="public/styles.css">
     <link rel="stylesheet" href="public/header.css">
     <link rel="stylesheet" href="public/about-us.css">
@@ -17,8 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 
 
-    <meta name="description" content="Looking for a trusted Chartered Accountant near you in Whitefield, Bangalore? Mohit Kedia & Associates offers expert CA services like Income Tax Matters, Audits and Financial Analysis for businesses and individuals.">
-    <meta name="description" content="Mohit Kedia & Associates is a premier Chartered Accountancy Firm, focused on rendering services and adding value to its clients across the globe by providing highly efficient, technical and professional services.">
+    <meta name="description" content="Looking for a trusted Chartered Accountant near you in Whitefield, Bangalore? Mohit Kedia & Associates offers expert CA services for businesses & individuals. ">
 
 
 
