--- a/about.html
+++ b/about.html
@@ -14,34 +14,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 
-    <meta name="description" content="Looking for a trusted Chartered Accountant near you in Whitefield, Bangalore? Mohit Kedia & Associates offers expert CA services for businesses and individuals.">
-    <meta name="description" content="Mohit Kedia & Associates is a premier Chartered Accountancy Firm, focused on rendering services and adding value to its clients across the globe by providing highly efficient, technical and professional services.">
+    <meta name="description" content="Mohit Kedia & Associates is a premier CA Firm, focused on adding value to it's clients across the globe by providing highly efficient & professional services.">
 
-    <script type="application/ld+json">
-      {
-        "@context": "https://schema.org",
-        "@type": "AccountingService",
-        "name": "Mohit Kedia & Associates",
-        "image": "https://yourwebsite.com/logo.png",
-        "address": {
-          "@type": "PostalAddress",
-          "streetAddress": "Shilpitha Sunflower Apartment, Borewell Road",
-          "addressLocality": "Whitefield",
-          "addressRegion": "Bangalore",
-          "postalCode": "560066",
-          "addressCountry": "IN"
-        },
-        "geo": {
-          "@type": "GeoCoordinates",
-          "latitude": 12.9350,
-          "longitude": 77.6100
-        },
-        "url": "https://mohitkediaassociates.com",
-        "telephone": "+919874820170",
-        "openingHours": "Mo-Fri 09:00-18:00",
-      }
-  </script>
-  
+
     
 </head>
 <body>
