--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
-  <meta name="description" content="Looking for a trusted Chartered Accountant near you in Whitefield, Bangalore? Mohit Kedia & Associates offers expert CA services for businesses and individuals.">
+  
+  
+  <meta name="description" content="Looking for a trusted Chartered Accountant near you in Whitefield, Bangalore? Reach Out Now at +919874820170 or camohitkedia@gmail.com">
 
   <script type="application/ld+json">
     {
