--- a/contact.html
+++ b/contact.html
@@ -90,15 +90,7 @@
 </div>
 
 <div class="google-map">
-    <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.5787129797304!2d77.60920317537068!3d12.93477658737722!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae144d859731bb%3A0x7be523c4ee2a1b09!2sNexus%20Mall%20Koramangala!5e0!3m2!1sen!2sin!4v1724849831010!5m2!1sen!2sin" 
-        width="600" 
-        height="450" 
-        style="border:0;" 
-        allowfullscreen="" 
-        loading="lazy" 
-        referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.024835821908!2d77.73692887564783!3d12.97026256490642!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1203d8ceda09%3A0xfc7b78d3885f217d!2sXPCQ%2B5P%20Shilpitha%20Sunflower%2C%20Nallurhalli%2C%20Whitefield%2C%20Bengaluru%2C%20Karnataka%20560066!5e0!3m2!1sen!2sin!4v1725976466085!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
   <div id="footer" class="footer">
     <div class="footer-quick-links">
