Add blog feature and other minor things

--- a/disclaimer.html
+++ b/disclaimer.html
@@ -42,7 +42,7 @@
             <a class="sub-section home" href="index.html">Home</a>
             <a class="sub-section About" href="about.html">About us</a>
             <a class="sub-section Services" href="services.html">Services</a>
-            <a class="sub-section Blog" href="https://medium.com/@camohitkedia" target="_blank">Blog</a>
+            <a class="sub-section Blog" href="blog.html">Blog</a>
             <a class="sub-section Laws" href="laws.html">Legal</a>
             <a class="sub-section Contact" href="contact.html">Contact us</a>
         </div>
@@ -62,7 +62,7 @@
       <li>The content and information on this website should not be construed as advice, advertisement, personal communication, invitation. Any person doing so, would be doing so at his or her own risk. Although every effort is being made to ensure accuracy of content, this site gives no guarantee that the contents are accurate and/or reliable.</li>
       <li>Updates and/ or modifications to the contents of this site may be posted at any time without notification to any user.</li>
       <li>The firm has contracted to outsource a few of its services. So by accepting to avail our services, the individual or firm directly accepts with this method of functioning of the firm.</li>
-      <li>The website of firm contains links to outside resources, of which the Firm has no control over the privacy practices or the content. They are provided only to facilitate the users accessing the Firm’s website. The website is in no way, to be held responsible for the privacy practices and/ or content appearing on these outside resources.</li>
+      <li>The website of firm contains links to outside resources, of which the Firm has no control over the privacy practices or the content. They are provided only to facilitate the users accessing the Firm's website. The website is in no way, to be held responsible for the privacy practices and/ or content appearing on these outside resources.</li>
       <li>All intellectual property rights with regard to content, layouts, images or any other matter with respect to this website vests with Mohit Kedia & Associates., trade mark rights to the names/marks used on website belongs to Mohit Kedia & Associates. except for the logos/names/marks of its clients or other organisations, which are used for informative purposes only. The copyright in the entire content in this website is owned by Mohit Kedia & Associates. unless otherwise specified.</li>
     </ul>
   </div>
