--- a/services.html
+++ b/services.html
@@ -36,7 +36,7 @@
             <a class="sub-section home" href="index.html">Home</a>
             <a class="sub-section About" href="about.html">About us</a>
             <a class="sub-section Services" href="services.html">Services</a>
-            <a class="sub-section Blog" href="https://medium.com/@camohitkedia" target="_blank">Blog</a>
+            <a class="sub-section Blog" href="blog.html">Blog</a>
             <a class="sub-section Laws" href="laws.html">Legal</a>
             <a class="sub-section Contact" href="contact.html">Contact us</a>
         </div>
